<resources>
    <string name="app_name">Nexus Lexic2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="exit">Exit</string>
    <string name="teacher_sign_in">Teacher Sign In</string>
    <string name="student_sign_in">Student Sign In</string>
    <string name="title_activity_teacher">Teacher Home Page</string>
    <string name="title_activity_student">Student Home Page</string>
    <string name="title_activity_student_likes">StudentLikesActivity</string>
    <string name="title_activity_assignment_options">AssignmentOptionsActivity</string>
    <string name="title_activity_student_list">StudentListActivity</string>
    <string name="students">Students</string>
    <string name="student_report_cards">Student Report Cards</string>
    <string name="chats">Chats</string>
    <string name="rewards">Rewards </string>
    <string name="student_groups">Student Groups</string>
    <string name="home_work">Home Work</string>
    <string name="today_assignments">Today\'s Assignments</string>
    <string name="grades">Grades </string>
    <string name="speaking_pals">Speaking Pals/Chats </string>
    <string name="extra_practice">Extra Practice </string>
    <string name="group_work">Group Work </string>
    <string name="store">Store </string>
    <string name="resources">Resources </string>



</resources>
