<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arunkarka.nexuslexic2.TeacherActivity"
    >
    <ImageView
        android:id="@+id/teacher_photo_imageview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/arun"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"/>
    <Button

        android:id="@+id/student_report_cards"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/student_report_cards"
        android:layout_alignParentRight="true"
        android:layout_below="@id/teacher_photo_imageview"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@color/orange"
        android:onClick="startStudentReportCardsActivity"/>
    <Button
        android:id="@+id/student_list_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/students"
        android:layout_alignParentRight="true"
        android:layout_below="@id/student_report_cards"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@color/darkred"
        android:onClick="startStudentListActivity"/>

    <Button
        android:id="@+id/homework"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/home_work"
        android:layout_alignParentLeft="true"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@color/purple"
        android:onClick="startStudentListActivity"/>
    <Button
        android:id="@+id/chats"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/chats"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/homework"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@color/darkblue"
        android:onClick="startStudentReportCardsActivity"/>

    <Button
        android:id="@+id/rewards"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/rewards"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/chats"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@color/green"
        android:onClick="startStudentListActivity"/>
    <Button
        android:id="@+id/student_groups"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/student_groups"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rewards"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@color/blue"
        android:onClick="startStudentReportCardsActivity"/>


</RelativeLayout>
